[package]
name = "car-auction-aws"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
lambda_http = "0.8.1"
tokio = { version = "1.21.2", features = ["macros"] }
serde = "1.0.147"
tracing-subscriber = "0.3.17"
serde_json = "1.0.107"